--- a/2026.02.10/offline.html
+++ b/2026.02.10/offline.html
@@ -12,5 +12,6 @@
     <p>Aplikácia je pripravená, ale internet momentálne nie je dostupný.</p>
     <p>Skús znova načítať stránku, keď bude pripojenie späť.</p>
   </main>
+  <script src="sw.js"></script>
 </body>
 </html>
